@@ -1,3 +1,7 @@
+2023-08-24	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Optimize structure and import methods.
+
 2023-08-08	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Fix uninstall bug.
